เปลี่ยนข้อความเล็กน้อยใน docs และ config

--- a/neko-tutorial/src/content/docs/index.mdx
+++ b/neko-tutorial/src/content/docs/index.mdx
@@ -1,17 +1,17 @@
 ---
-title: Welcome to Starlight
-description: Get started building your docs site with Starlight.
+title: ยินดีต้อนรับสู่ Discord bot Tutorial
+description: เรียนรู้วิธีสร้างและปรับแต่งบอท Discord ของคุณเองด้วยขั้นตอนง่ายๆ พร้อมคำแนะนำในการใช้งานและตัวอย่างโค้ดที่เข้าใจง่าย.
 template: splash
 hero:
-  tagline: Congrats on setting up a new Starlight project!
+  tagline: ปรับแต่งบอท Discord ของคุณเองด้วยขั้นตอนง่ายๆ พร้อมคำแนะนำในการใช้งานและตัวอย่างโค้ดที่เข้าใจง่าย.
   image:
     file: ../../assets/houston.webp
   actions:
-    - text: Example Guide
+    - text: วิธีการติดตั้ง
       link: /guides/example/
       icon: right-arrow
-    - text: Read the Starlight docs
-      link: https://starlight.astro.build
+    - text: เพิ่มขั้นตอนการใช้งาน หรือ อื่นๆ
+      link: https://github.com/NekoSakuraLucia/NekoTutorial-Docs
       icon: external
       variant: minimal
 ---
