--- a/neko-tutorial/src/content/docs/index.mdx
+++ b/neko-tutorial/src/content/docs/index.mdx
@@ -8,7 +8,7 @@ hero:
     file: ../../assets/houston.webp
   actions:
     - text: วิธีการติดตั้ง
-      link: /guides/example/
+      link: /guides/installation/example
       icon: right-arrow
     - text: เพิ่มขั้นตอนการใช้งาน หรือ อื่นๆ
       link: https://github.com/NekoSakuraLucia/NekoTutorial-Docs
