--- a/neko-tutorial/src/content/docs/index.mdx
+++ b/neko-tutorial/src/content/docs/index.mdx
@@ -5,7 +5,7 @@ template: splash
 hero:
   tagline: ปรับแต่งบอท Discord ของคุณเองด้วยขั้นตอนง่ายๆ พร้อมคำแนะนำในการใช้งานและตัวอย่างโค้ดที่เข้าใจง่าย.
   image:
-    file: ../../assets/houston.webp
+    file: ../../assets/Neko-Chibi.png
   actions:
     - text: วิธีการติดตั้ง
       link: /guides/installation/example
